--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -336,106 +336,106 @@ jobs:
             });
 
       # only execute this in v1 release pipeline & formal release
-      # - name: Publish docker images - formal release only!
-      #   if: ${{ startsWith(github.event.inputs.zowe-artifact-dir, '1') && env.IS_FORMAL_RELEASE == 'true' }}
-      #   timeout-minutes: 120
-      #   run: |
-      #     docker_s390x=$(cat ${{ steps.validate.outputs.PROMOTE_JSON_FILE_NAME_FULL }} | jq -r '."docker-s390x"')
-      #     docker_amd64=$(cat ${{ steps.validate.outputs.PROMOTE_JSON_FILE_NAME_FULL }} | jq -r '."docker-amd64"')
-      #     docker_amd64_sources=$(cat ${{ steps.validate.outputs.PROMOTE_JSON_FILE_NAME_FULL }} | jq -r '."docker-amd64-sources"')
-      #     docker_s390x_sources=$(cat ${{ steps.validate.outputs.PROMOTE_JSON_FILE_NAME_FULL }} | jq -r '."docker-s390x-sources"')
+      - name: Publish docker images - formal release only!
+        if: ${{ startsWith(github.event.inputs.zowe-artifact-dir, '1') && env.IS_FORMAL_RELEASE == 'true' }}
+        timeout-minutes: 120
+        run: |
+          docker_s390x=$(cat ${{ steps.validate.outputs.PROMOTE_JSON_FILE_NAME_FULL }} | jq -r '."docker-s390x"')
+          docker_amd64=$(cat ${{ steps.validate.outputs.PROMOTE_JSON_FILE_NAME_FULL }} | jq -r '."docker-amd64"')
+          docker_amd64_sources=$(cat ${{ steps.validate.outputs.PROMOTE_JSON_FILE_NAME_FULL }} | jq -r '."docker-amd64-sources"')
+          docker_s390x_sources=$(cat ${{ steps.validate.outputs.PROMOTE_JSON_FILE_NAME_FULL }} | jq -r '."docker-s390x-sources"')
           
-      #     if [[ -z "$docker_s390x" ]] && [[ -z "$docker_amd64" ]]; then
-      #       RED='\033[0;31m'
-      #       echo -e "${RED}\n missing docker amd64 or docker s390x - they are not parsed properly, please check step: [Validate] Print promote-artifacts.json to find out what went wrong"
-      #       exit 1
-      #     fi
+          if [[ -z "$docker_s390x" ]] && [[ -z "$docker_amd64" ]]; then
+            RED='\033[0;31m'
+            echo -e "${RED}\n missing docker amd64 or docker s390x - they are not parsed properly, please check step: [Validate] Print promote-artifacts.json to find out what went wrong"
+            exit 1
+          fi
 
-      #     # login first
-      #     echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USER }}" --password-stdin
+          # login first
+          echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USER }}" --password-stdin
 
-      #     # initialize everything
-      #     manifest_amends=
-      #     manifest_source_amends=
+          # initialize everything
+          manifest_amends=
+          manifest_source_amends=
           
-      #     # load images first
-      #     docker load --input .release/server-bundle.amd64-*.tar
-      #     manifest_amends+=" --amend ompzowe/server-bundle:amd64"
-      #     docker load --input .release/server-bundle.s390x-*.tar
-      #     manifest_amends+=" --amend ompzowe/server-bundle:s390x"
+          # load images first
+          docker load --input .release/server-bundle.amd64-*.tar
+          manifest_amends+=" --amend ompzowe/server-bundle:amd64"
+          docker load --input .release/server-bundle.s390x-*.tar
+          manifest_amends+=" --amend ompzowe/server-bundle:s390x"
           
-      #     if [[ -n "$docker_amd64_sources" ]]; then
-      #       # the image in tar should always be ompzowe/server-bundle:amd64-sources
-      #       docker load --input .release/server-bundle.sources.amd64-*.tar
-      #       manifest_source_amends+=" --amend ompzowe/server-bundle:amd64-sources"
-      #     fi
+          if [[ -n "$docker_amd64_sources" ]]; then
+            # the image in tar should always be ompzowe/server-bundle:amd64-sources
+            docker load --input .release/server-bundle.sources.amd64-*.tar
+            manifest_source_amends+=" --amend ompzowe/server-bundle:amd64-sources"
+          fi
           
-      #     if [[ -n "$docker_s390x_sources" ]]; then
-      #       # the image in tar should always be ompzowe/server-bundle:amd64-sources
-      #       docker load --input .release/server-bundle.sources.s390x-*.tar
-      #       manifest_source_amends+=" --amend ompzowe/server-bundle:s390x-sources"
-      #     fi
+          if [[ -n "$docker_s390x_sources" ]]; then
+            # the image in tar should always be ompzowe/server-bundle:amd64-sources
+            docker load --input .release/server-bundle.sources.s390x-*.tar
+            manifest_source_amends+=" --amend ompzowe/server-bundle:s390x-sources"
+          fi
         
-      #     # publish images
-      #     docker push ompzowe/server-bundle:amd64
-      #     docker push ompzowe/server-bundle:s390x
-      #     export DOCKER_CLI_EXPERIMENTAL=enabled
-      #     docker manifest create ompzowe/server-bundle:latest$manifest_amends
-      #     docker manifest push ompzowe/server-bundle:latest
-      #     docker manifest create ompzowe/server-bundle:v${{ github.event.inputs.zowe-release-version }}$manifest_amends
-      #     docker manifest push ompzowe/server-bundle:v${{ github.event.inputs.zowe-release-version }}
+          # publish images
+          docker push ompzowe/server-bundle:amd64
+          docker push ompzowe/server-bundle:s390x
+          export DOCKER_CLI_EXPERIMENTAL=enabled
+          docker manifest create ompzowe/server-bundle:latest$manifest_amends
+          docker manifest push ompzowe/server-bundle:latest
+          docker manifest create ompzowe/server-bundle:v${{ github.event.inputs.zowe-release-version }}$manifest_amends
+          docker manifest push ompzowe/server-bundle:v${{ github.event.inputs.zowe-release-version }}
         
-      #     # publish source images
-      #     if [[ -n "$manifest_source_amends" ]]; then
-      #       docker push ompzowe/server-bundle:amd64-sources
-      #       docker push ompzowe/server-bundle:s390x-sources
-      #       export DOCKER_CLI_EXPERIMENTAL=enabled
-      #       docker manifest create ompzowe/server-bundle:latest-sources$manifest_source_amends
-      #       docker manifest push ompzowe/server-bundle:latest-sources
-      #       docker manifest create ompzowe/server-bundle:v${{ github.event.inputs.zowe-release-version }}-sources$manifest_source_amends
-      #       docker manifest push ompzowe/server-bundle:v${{ github.event.inputs.zowe-release-version }}-sources
-      #     fi
+          # publish source images
+          if [[ -n "$manifest_source_amends" ]]; then
+            docker push ompzowe/server-bundle:amd64-sources
+            docker push ompzowe/server-bundle:s390x-sources
+            export DOCKER_CLI_EXPERIMENTAL=enabled
+            docker manifest create ompzowe/server-bundle:latest-sources$manifest_source_amends
+            docker manifest push ompzowe/server-bundle:latest-sources
+            docker manifest create ompzowe/server-bundle:v${{ github.event.inputs.zowe-release-version }}-sources$manifest_source_amends
+            docker manifest push ompzowe/server-bundle:v${{ github.event.inputs.zowe-release-version }}-sources
+          fi
 
       # only execute this before v2 launches
       # on-demand, sometimes for hotfix you don't have to do it
-      # - name: '[EXTRA] extra work involving jfrog copy cli v2 artifacts in v1 release pipeline - formal release only!'
-      #   if: ${{ startsWith(github.event.inputs.zowe-artifact-dir, '1') && env.IS_FORMAL_RELEASE == 'true' }}
-      #   run: |
-      #     function jfrog_search_latest {
-      #       RED='\033[0;31m'
-      #       search_pattern=$1
-      #       if [[ -z "$search_pattern" ]]; then
-      #         echo -e "${RED}In jfrog search latest function, search pattern is not provided" > /dev/stderr
-      #         exit 1
-      #       fi
-      #       out=$(jfrog rt search --sort-by=created --sort-order=desc --limit=1 "$search_pattern" | jq -r '.[].path')
-      #       if [[ -z "$out" ]]; then
-      #         echo -e "${RED}Cannot find latest artifact in pattern: $search_pattern" > /dev/stderr
-      #         exit 1
-      #       fi
-      #       echo $out
-      #     }
+      - name: '[EXTRA] extra work involving jfrog copy cli v2 artifacts in v1 release pipeline - formal release only!'
+        if: ${{ startsWith(github.event.inputs.zowe-artifact-dir, '1') && env.IS_FORMAL_RELEASE == 'true' }}
+        run: |
+          function jfrog_search_latest {
+            RED='\033[0;31m'
+            search_pattern=$1
+            if [[ -z "$search_pattern" ]]; then
+              echo -e "${RED}In jfrog search latest function, search pattern is not provided" > /dev/stderr
+              exit 1
+            fi
+            out=$(jfrog rt search --sort-by=created --sort-order=desc --limit=1 "$search_pattern" | jq -r '.[].path')
+            if [[ -z "$out" ]]; then
+              echo -e "${RED}Cannot find latest artifact in pattern: $search_pattern" > /dev/stderr
+              exit 1
+            fi
+            echo $out
+          }
 
-      #     # copy cli package vnext
-      #     cli_package_next_search=$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".from')"/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".sourcePath')"/*/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".sourceFiles."zowe-cli-package-next-*.zip"')
-      #     cli_package_next_src=$(jfrog_search_latest $cli_package_next_search)
-      #     cli_package_next_tgt_filename=$(echo ${cli_package_next_src##*/} | sed "s#-RC1##g")  
-      #     cli_package_next_tgt=$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".to')"/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".targetPath')"/"$cli_package_next_tgt_filename
-      #     jfrog rt copy --flat "$cli_package_next_src" "$cli_package_next_tgt"
+          # copy cli package vnext
+          cli_package_next_search=$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".from')"/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".sourcePath')"/*/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".sourceFiles."zowe-cli-package-next-*.zip"')
+          cli_package_next_src=$(jfrog_search_latest $cli_package_next_search)
+          cli_package_next_tgt_filename=$(echo ${cli_package_next_src##*/} | sed "s#-RC1##g")  
+          cli_package_next_tgt=$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".to')"/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".targetPath')"/"$cli_package_next_tgt_filename
+          jfrog rt copy --flat "$cli_package_next_src" "$cli_package_next_tgt"
 
-      #     # copy cli plugin vnext
-      #     cli_plugins_next_search=$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".from')"/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".sourcePath')"/*/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".sourceFiles."zowe-cli-plugins-next-*.zip"')
-      #     cli_plugins_next_src=$(jfrog_search_latest $cli_plugins_next_search)
-      #     cli_plugins_next_tgt_filename=$(echo ${cli_plugins_next_src##*/} | sed "s#-RC1##g")  
-      #     cli_plugins_next_tgt=$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".to')"/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".targetPath')"/"$cli_plugins_next_tgt_filename
-      #     jfrog rt copy --flat "$cli_plugins_next_src" "$cli_plugins_next_tgt"
+          # copy cli plugin vnext
+          cli_plugins_next_search=$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".from')"/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".sourcePath')"/*/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".sourceFiles."zowe-cli-plugins-next-*.zip"')
+          cli_plugins_next_src=$(jfrog_search_latest $cli_plugins_next_search)
+          cli_plugins_next_tgt_filename=$(echo ${cli_plugins_next_src##*/} | sed "s#-RC1##g")  
+          cli_plugins_next_tgt=$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".to')"/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-next".targetPath')"/"$cli_plugins_next_tgt_filename
+          jfrog rt copy --flat "$cli_plugins_next_src" "$cli_plugins_next_tgt"
 
-      #     # copy cli sdk vnext
-      #     cli_sdk_next_search=$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-sdk-next".from')"/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-sdk-next".sourcePath')"/*/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-sdk-next".sourceFiles."zowe-nodejs-sdk-next-*.zip"')
-      #     cli_sdk_next_src=$(jfrog_search_latest $cli_sdk_next_search)
-      #     cli_sdk_next_tgt_filename=$(echo ${cli_sdk_next_src##*/} | sed "s#-RC1##g")  
-      #     cli_sdk_next_tgt=$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-sdk-next".to')"/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-sdk-next".targetPath')"/"$cli_sdk_next_tgt_filename
-      #     jfrog rt copy --flat "$cli_sdk_next_src" "$cli_sdk_next_tgt"
+          # copy cli sdk vnext
+          cli_sdk_next_search=$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-sdk-next".from')"/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-sdk-next".sourcePath')"/*/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-sdk-next".sourceFiles."zowe-nodejs-sdk-next-*.zip"')
+          cli_sdk_next_src=$(jfrog_search_latest $cli_sdk_next_search)
+          cli_sdk_next_tgt_filename=$(echo ${cli_sdk_next_src##*/} | sed "s#-RC1##g")  
+          cli_sdk_next_tgt=$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-sdk-next".to')"/"$(cat ${{ env.ZOWE_RELEASE_JSON }} | jq -r '."zowe-cli-sdk-next".targetPath')"/"$cli_sdk_next_tgt_filename
+          jfrog rt copy --flat "$cli_sdk_next_src" "$cli_sdk_next_tgt"
 
       - name: Release result message (DevOps please click here to copy and announce)
         timeout-minutes: 2
