--- a/.github/workflows/release-v2.yml
+++ b/.github/workflows/release-v2.yml
@@ -40,7 +40,7 @@ env:
   ORIGINAL_STAGING_DIR: .original-zowe-install-packaging-staging
   PROMOTE_PTF_DIR: .promote-ptf
 
-
+jobs:
   # check-permission:
   #   runs-on: ubuntu-latest
   #   steps:
@@ -57,10 +57,9 @@ env:
   #           echo "I am not seeing an admin running this workflow. For security, I am going to stop this workflow here..."
   #           exit 1
   #         fi
-jobs:
   input-check:
     runs-on: ubuntu-latest
-    needs: check-permission
+    # needs: check-permission
     steps:
       - name: Check input zowe-artifact-dir
         if: ${{ !startsWith(github.event.inputs.zowe-artifact-dir, '2') }}
